--- a/README.Rmd
+++ b/README.Rmd
@@ -62,4 +62,4 @@ answer2.0 <- getNamesCount(palmerpenguins::penguins, species, bill_length_mm, 43
 
 print(answer2.0)
 ```
-The **getNameCount** function produced a number, this number is the total species observations that have a corresponding bill length measurement below the *numericalValue* that was set at the mean (43.92mm) 
+The **getNamesCount** function produced a number, this number is the total species observations that have a corresponding bill length measurement below the *numericalValue* that was set at the mean (43.92mm) 
