--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of the **getNamesCount** function from the **namecount** package is to provide a quick and easy way to count the number of observations in a categorical column of your data set that are less than a given numeric value of a numeric column. 
-
-This is a quick and easy way to better understand the types of observations in your data set without having to write out a long function yourself. 
+The **namecount** package contains 5 functions:**getNamesCount**, **getNamesStart**, **getNamesUnique**, **countStart**, and **countNamesUnique**. These functions can be used to count the number of names in a specified column or retrieve names from a specified column.The goal of the **getNamesCount** package is to provide a quick and easy way to filter your to better understand your data set without having to write out a long
+function yourself.
 
 ## Installation
 
@@ -31,9 +30,9 @@ You can install the development version of namecount from [GitHub](https://githu
 devtools::install_github("stat545ubc-2023/namecount")
 ```
 
-## Example 1
+## getNamesCount - Example 1
 
-This is a basic example using a basic data set: 
+This is a basic example of the `getNamesCount` function from the **namecount** package using a basic data set: 
 
 ```{r example}
 # calling the 'namecount' package
@@ -47,7 +46,7 @@ answer1.0 <- getNamesCount(dfSample, fruit, numFruit, 50)
 
 print(answer1.0)
 ```
-## Example 2
+## getNamesCount - Example 2
 
 Looking at the summary statistics from the **penguins** data set from the *palmerpenguins* package you can see that the mean bill length collected in the data is 43.92mm. 
 ```{r palmerpenguins}
@@ -58,8 +57,19 @@ print(sumP)
 Now I would like to know how many observations there are in the data set for species of penguins with a bill length below the mean collected. This is where I would use the **namecount** function:
 ```{r}
 library(namecount)
+
 answer2.0 <- getNamesCount(palmerpenguins::penguins, species, bill_length_mm, 43.92)
 
 print(answer2.0)
 ```
 The **getNamesCount** function produced a number, this number is the total species observations that have a corresponding bill length measurement below the *numericalValue* that was set at the mean (43.92mm) 
+
+### Conclusion
+
+If you would like to see more examples of usage for the **namecount** package please refer to the package vignette or function help pages. 
+
+## References 
+
+The source of the **penguins** data set from the `palmerpenguins` R package used here: 
+
+Horst AM, Hill AP, Gorman KB (2020). palmerpenguins: Palmer Archipelago (Antarctica) penguin data. doi:10.5281/zenodo.3960218, R package version 0.1.0, https://allisonhorst.github.io/palmerpenguins/.
