adding link to pkgdown website

--- a/README.Rmd
+++ b/README.Rmd
@@ -68,6 +68,10 @@ The **getNamesCount** function produced a number, this number is the total speci
 
 If you would like to see more examples of usage for the **namecount** package please refer to the package vignette or function help pages. 
 
+## Website
+
+[Link to pkgdown website](https://stat545ubc-2023.github.io/namecount/)
+
 ## References 
 
 The source of the **penguins** data set from the `palmerpenguins` R package used here: 
